# Intro

./: CMakeLists.txt  Cheatsheet.txt  Links.md  ReadIntervall.cpp  main.cpp  photo.cpp  photo.in
LocalContest/: 3_Frame.cpp  Caturday.cpp  Pareto.cpp
uebung0/: event.cpp  hello.cpp  photo.cpp
uebung1/: boxes.cpp  datastruct.cpp  rain.cpp  snow.cpp
uebung10/: margaret.cpp  numbertheorie.cpp  tldr.cpp
uebung11/: circles.cpp
uebung2/: 23outof5.cpp  cow.cpp  haircut.cpp  safety.cpp
uebung3/: cpu.cpp  farida.cpp  knapsack.cpp
uebung4/: algorithms.cpp  dna.cpp  globbing.cpp  iplookup.cpp
uebung6/: cactus.cpp  goto.cpp  indy.cpp
uebung7/: algorithm.cpp  cake.cpp  munchkin.cpp  wormholes.cpp
uebung8/: apocalypse.cpp  apocalypse2.cpp  armarIV.cpp  factors.cpp  flowAlgo.cpp
uebung9/: bigfactorial.cpp  bigfactorialnew.cpp  coffee.cpp  mathnew.cpp  mathprecalc.cpp  troll.cpp
