cmake_minimum_required(VERSION 3.22)
project(Intro)

set(CMAKE_CXX_STANDARD 14)

add_executable(Intro uebung0/main.cpp)
add_executable(Photo uebung0/photo.cpp)
add_executable(Data uebung1/datastruct.cpp)
add_executable(Box uebung1/boxes.cpp)
add_executable(Rain uebung1/rain.cpp)
add_executable(Snow uebung1/snow.cpp)
