cmake_minimum_required(VERSION 3.22)
project(Intro)

set(CMAKE_CXX_STANDARD 14)

add_executable(Intro uebung0/main.cpp)
add_executable(Photo uebung0/photo.cpp)
add_executable(Data uebung1/datastruct.cpp)
add_executable(Read ReadIntervall.cpp)
add_executable(Box uebung1/boxes.cpp)
add_executable(Rain uebung1/rain.cpp)
add_executable(Snow uebung1/snow.cpp)
add_executable(23 uebung2/23outof5.cpp)
add_executable(cow uebung2/cow.cpp)
add_executable(hair uebung2/haircut.cpp)
add_executable(safety uebung2/safety.cpp)
add_executable(event uebung0/event.cpp)
add_executable(hello uebung0/hello.cpp)
add_executable(farida uebung3/farida.cpp)
add_executable(knapsack uebung3/knapsack.cpp)
add_executable(cpu uebung3/cpu.cpp)
add_executable(algo uebung4/algorithms.cpp)
