cmake_minimum_required(VERSION 3.22)
project(Intro)

set(CMAKE_CXX_STANDARD 14)

add_executable(Intro uebung0/main.cpp)
add_executable(Photo uebung0/photo.cpp)
add_executable(Data uebung1/datastruct.cpp)
add_executable(Read ReadIntervall.cpp)
add_executable(Box uebung1/boxes.cpp)
add_executable(Rain uebung1/rain.cpp)
add_executable(Snow uebung1/snow.cpp)
add_executable(23 uebung2/23outof5.cpp)
add_executable(cow uebung2/cow.cpp)
add_executable(hair uebung2/haircut.cpp)
add_executable(safety uebung2/safety.cpp)
add_executable(event uebung0/event.cpp)
add_executable(hello uebung0/hello.cpp)
add_executable(farida uebung3/farida.cpp)
add_executable(knapsack uebung3/knapsack.cpp)
add_executable(cpu uebung3/cpu.cpp)
add_executable(algo uebung4/algorithms.cpp)
add_executable(glob uebung4/globbing.cpp)
add_executable(ip uebung4/iplookup.cpp)
add_executable(dna uebung4/dna.cpp)
add_executable(goto uebung6/goto.cpp)
add_executable(indy uebung6/indy.cpp)
add_executable(cactus uebung6/cactus.cpp)
add_executable(algorithm uebung7/algorithm.cpp)
add_executable(munchkin uebung7/munchkin.cpp)
add_executable(wormholes uebung7/wormholes.cpp)
add_executable(cake uebung7/cake.cpp)
add_executable(flow uebung8/flowAlgo.cpp)
add_executable(apocalypse uebung8/apocalypse.cpp)
add_executable(apocalypse2 uebung8/apocalypse2.cpp)
add_executable(armar uebung8/armarIV.cpp)
